--- a/roles/docker/handlers/main.yml
+++ b/roles/docker/handlers/main.yml
@@ -2,3 +2,7 @@
 # handlers file for docker
 - name: restart docker
   service: name=docker state=restarted
+
+
+- name: reload systemd
+  command: systemctl daemon-reload
