--- a/roles/openshift_minion/files/openshift.service
+++ b/roles/openshift_minion/files/openshift.service
@@ -8,6 +8,7 @@ Documentation=https://github.com/openshift/origin
 Type=simple
 EnvironmentFile=-/etc/sysconfig/openshift
 ExecStart=/usr/local/bin/openshift start $ROLE $OPTIONS
+WorkingDirectory=/var/run/openshift
 
 [Install]
 WantedBy=multi-user.target
