--- a/roles/openshift_minion/tasks/main.yml
+++ b/roles/openshift_minion/tasks/main.yml
@@ -9,7 +9,9 @@
   lineinfile:
     dest: /etc/ansible/facts.d/minion.fact
     regexp: '^nb_minions'
-    line: "nb_minions={{ hostvars | oo_select_keys( groups[ 'tag_env-host-type_' + oo_env + '-openshift-minion' ] ) | oo_collect('ansible_local') | oo_collect('minion') | oo_collect('minion') | oo_collect('nb_minions') | map('int') | max }}"
+    line: "nb_minions={{ hostvars | oo_select_keys( groups[ 'tag_env-host-type_' + oo_env + '-openshift-minion' ] ) \
+                                  | oo_collect('ansible_local') | oo_collect('minion') | oo_collect('minion') \
+                                  | oo_collect('nb_minions')  | map('int') | max }}"
 
 - include: openshift_from_yum.yml
   when: oo_openshift_binary is not defined
@@ -25,7 +27,7 @@
     line="{{ item.line }}"
   with_items:
     - { regex: '^ROLE=', line: 'ROLE=\"node\"' }
-    - { regex: '^OPTIONS=', line: 'OPTIONS=\"--master=http://{{ oo_master_ips[0] }}:8080  --loglevel=5\"' }
+    - { regex: '^OPTIONS=', line: 'OPTIONS=\"--master=https://{{ oo_master_ips[0] }}:8443  --loglevel=1 --kubeconfig=/var/run/openshift/openshift.local.certificates/openshift-client/.kubeconfig\"' }
   notify:
     - restart openshift-minion
 
