--- a/roles/openshift_minion/tasks/openshift_from_local.yml
+++ b/roles/openshift_minion/tasks/openshift_from_local.yml
@@ -4,5 +4,8 @@
     dest: /usr/local/bin/openshift
     mode: 0755
 
+- name: Create openshift WorkingDirectory
+  file: path=/var/run/openshift owner=root state=directory
+
 - name: Configure OpenShift systemd unit
   copy: src=openshift.service dest=/etc/systemd/system/openshift.service
