--- a/roles/repos/tasks/main.yaml
+++ b/roles/repos/tasks/main.yaml
@@ -18,6 +18,9 @@
 - name: Ensure a docker repo is laid down
   copy: src=docker.repo dest=/etc/yum.repos.d/docker.repo
 
+- name: Adds centos repo for docker
+  copy: src=docker-centos.repo dest=/etc/yum.repos.d/docker-centos.repo
+
 - name: Ensure the kubernetes repo is available
   copy: src=epel7-kubernetes.repo dest=/etc/yum.repos.d/epel7-kubernetes.repo
 
