--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -24,16 +24,10 @@
     - restart openshift-master
 
 - name: Open firewalld port for etcd embedded in OpenShift
-  firewalld: port=4001/tcp permanent=false state=enabled
-
-- name: Save firewalld port for etcd embedded in
-  firewalld: port=4001/tcp permanent=true state=enabled
-
-- name: Open firewalld port for OpenShift
-  firewalld: port=8080/tcp permanent=false state=enabled
-
-- name: Save firewalld port for OpenShift
-  firewalld: port=8080/tcp permanent=true state=enabled
+  firewalld: port={{ item[0] }} permanent={{ item[1] }} state=enabled
+  with_nested:
+    - [ 4001/tcp, 8080/tcp, 8443/tcp, 8444/tcp ]
+    - [ true, false ]
 
 - name: Enable OpenShift
   service: name=openshift enabled=yes state=started
