- Adding helloworld openshift example - Fixing documentation - Adding template for openshift-router - Lowering loglevel - Adding restart after openshift binary copy

--- a/playbooks/aws/openshift-master/config.yml
+++ b/playbooks/aws/openshift-master/config.yml
@@ -38,4 +38,9 @@
         oo_minion_ips: "{{ hostvars['localhost'].oo_minion_ips | default(['']) }}",
         oo_bind_ip: "{{ hostvars[inventory_hostname].ansible_eth0.ipv4.address | default(['']) }}"
       }
-    - ../../../roles/pods
+    - {
+        role: ../../../roles/pods,
+        oo_master_ip: "{{ groups['tag_env-host-type_' + oo_env + '-openshift-master'][0] }}"
+      }
+
+
